Обновлена swagger документация
