# internal/module/auth/response/http.go
@@ -4,3 +4,7 @@ type Error400 struct {
 	Message string `json:"message"`
 	Errors  any    `json:"errors,omitempty"`
 }
+
+type Error401 struct {
+	Message string `json:"message"`
+}
